Add DBService interface and its first implementation to work with products

--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,10 @@
             <artifactId>json-io</artifactId>
             <version>4.14.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.42.0.0</version>
+        </dependency>
     </dependencies>
 </project>
